# Make3D

./: AppMain.cpp  AppState.cpp  AppState.h  BuildVolumeFromImages.cpp  BuildVolumeFromImages.h  CImg.h  CMakeLists.txt  FBXExporter.cpp  FBXExporter.h  GUIApp.cpp  GUIState.cpp  GUIState.h  ImageLoader.cpp  ImageLoader.h  ImageProcessor.cpp  ImageProcessor.h  ImageUtils.cpp  ImageUtils.h  MainApp.cpp  MainApp.h  MainGUI.cpp  Make3D.sln  Make3D.vcxproj  MarchingCubes.compute.hlsl  MarchingCubesTable.h  MarchingCubesTables.cpp  MarchingCubesTables.h  MeshBuilder.cpp  MeshBuilder.h  MeshGenerator.cpp  MeshGenerator.h  MeshReducer.cpp  MeshReducer.h  MeshUtils.cpp  MeshUtils.h  PNGLoader.cpp  PNGLoader.h  PartClassifier.cpp  PartClassifier.h  PartProcessor.cpp  (+22 more)
.github/workflows/: make3d-advanced.yml  portfolio-validation.yml
cmake/: VerifyGameAssetArtifacts.cmake  VerifyProductionSample.cmake
docs/: ADVANCED_RECONSTRUCTION.md  GENERIC_GAME_ASSET_PIPELINE.md  GUI_INTEGRATION_PLAN.md  IMPLEMENTATION_STATUS.md  OUTPUT_ARTIFACTS.md  PORTFOLIO_README.md  PORTFOLIO_VALIDATION.md  PRODUCTION_STANDARD.md  REVIEWER_BRIEF.md
docs/reports/: README.md
docs/wiki/: Home.md
samples/input/: sample_character.ppm
scripts/: portfolio_validation.py  run_portfolio_validation.ps1  run_portfolio_validation.sh  validate_benchmark_ablation.py
src/: Make3DAdvancedCLI.cpp  Make3DAdvancedCore.cpp  Make3DAdvancedCore.h  Make3DAdvancedGui.cpp  Make3DAdvancedGuiStable.cpp  Make3DAdvancedGuiStructured.cpp  Make3DAssetAnalysis.cpp  Make3DAssetAnalysis.h  Make3DAssetAuditPack.h  Make3DAssetPlan.cpp  Make3DAssetPlan.h  Make3DAssetTypes.cpp  Make3DAssetTypes.h  Make3DBenchmark.cpp  Make3DBenchmark.h  Make3DCompleteGameAssetPipeline.cpp  Make3DCompleteGameAssetPipeline.h  Make3DDeliveryPack.h  Make3DFullProductionAsset.h  Make3DGameAssetCLI.cpp  Make3DGameAssetCompletion.h  Make3DGameAssetFinalization.h  Make3DGameAssetGenerator.cpp  Make3DGameAssetGenerator.h  Make3DGameAssetPipeline.cpp  Make3DGameAssetPipeline.h  Make3DGeometryRefinementPack.h  Make3DGltfMaterialExporter.cpp  Make3DGltfMaterialExporter.h  Make3DGuiAdapter.cpp  Make3DGuiAdapter.h  Make3DHeroCharacterModel.cpp  Make3DHeroCharacterModel.h  Make3DHeroDetailEnhancer.cpp  Make3DHeroDetailEnhancer.h  Make3DHeroFineDetailPass.cpp  Make3DHeroFineDetailPass.h  Make3DHeroFittedStructuredAssetBuilder.cpp  Make3DHeroSemanticGltfExporter.cpp  Make3DHeroSemanticGltfExporter.h  (+32 more)
tests/: Make3DAdvancedCoreSmokeTest.cpp  Make3DAssetAnalysisPlanTest.cpp  Make3DBenchmarkTest.cpp  Make3DFullProductionAssetTest.cpp  Make3DGameAssetPipelineTest.cpp  Make3DGameAssetTest.cpp  Make3DGltfMaterialExporterTest.cpp  Make3DHeroCharacterModelTest.cpp  Make3DHeroOnlyProductionTest.cpp  Make3DHeroSemanticGltfExporterTest.cpp  Make3DLearnedShapeModelTest.cpp  Make3DLearnedShapeTrainerTest.cpp  Make3DMaskRefinerTest.cpp  Make3DMeshQualityGateTest.cpp  Make3DMeshToolsTest.cpp  Make3DModelPolisherTest.cpp  Make3DShapeInferenceTest.cpp  Make3DStructuredAssetBuilderTest.cpp  Make3DTypedProceduralAssetsTest.cpp  Make3DVertexColorGltfExporterTest.cpp  Make3DVoxelVolumeTest.cpp
tools/: GenerateAdvancedSamples.cpp  GenerateCompleteGameAssetSuite.cpp  GenerateGenericAssetSample.cpp  GenerateMeshQualityReport.cpp  GenerateProductionPipelineSample.cpp  TrainLearnedShapeModel.cpp
x64/Debug/: vc143.idb
x64/Debug/Make3D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Make3D.lastbuildstate
x64/Release/: Make3D.exe.recipe  Make3D.iobj  Make3D.ipdb
x64/Release/Make3D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Make3D.lastbuildstate  fxc.command.1.tlog  fxc.read.1.tlog  fxc.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
